--- a/PortalStations/PortalStations.csproj
+++ b/PortalStations/PortalStations.csproj
@@ -127,6 +127,7 @@
         <Compile Include="Stations\PortalStationGUI.cs" />
         <Compile Include="Stations\SetData.cs" />
         <Compile Include="Stations\Stations.cs" />
+        <Compile Include="Stations\Teleportation.cs" />
         <Compile Include="VersionHandshake.cs" />
     </ItemGroup>
     <ItemGroup>
