--- a/PortalStations/PortalStations.csproj
+++ b/PortalStations/PortalStations.csproj
@@ -118,9 +118,9 @@
         </Reference>
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="ItemManager.cs" />
-        <Compile Include="PieceManager\MaterialReplacer.cs" />
-        <Compile Include="PieceManager\PieceManager.cs" />
+        <Compile Include="Managers\ItemManager.cs" />
+        <Compile Include="Managers\MaterialReplacer.cs" />
+        <Compile Include="Managers\PieceManager.cs" />
         <Compile Include="Plugin.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="Stations\Patches.cs" />
