--- a/PortalStations/PortalStations.csproj
+++ b/PortalStations/PortalStations.csproj
@@ -79,6 +79,9 @@
         <Reference Include="ServerSync">
             <HintPath>Libs\ServerSync.dll</HintPath>
         </Reference>
+        <Reference Include="SoftReferenceableAssets">
+          <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Valheim\valheim_Data\Managed\publicized_assemblies\SoftReferenceableAssets_publicized.dll</HintPath>
+        </Reference>
         <Reference Include="System" />
         <Reference Include="System.Core" />
         <Reference Include="System.Data" />
@@ -125,7 +128,6 @@
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="Stations\Patches.cs" />
         <Compile Include="Stations\PersonalTeleportationDevice.cs" />
-        <Compile Include="Stations\PersonalTeleportationGUI.cs" />
         <Compile Include="Stations\PortalStation.cs" />
         <Compile Include="Stations\PortalStationGUI.cs" />
         <Compile Include="Stations\SetData.cs" />
@@ -137,7 +139,7 @@
         <None Include="App.config" />
     </ItemGroup>
     <ItemGroup>
-        <EmbeddedResource Include="..\..\..\evennewerbundles\portal_station_assets">
+        <EmbeddedResource Include="..\..\..\bundles_2024\portal_station_assets">
           <Link>assets\portal_station_assets</Link>
         </EmbeddedResource>
         <Content Include=".gitignore" />
