--- a/PortalStations/PortalStations.csproj
+++ b/PortalStations/PortalStations.csproj
@@ -10,7 +10,7 @@
         <AppDesignerFolder>Properties</AppDesignerFolder>
         <RootNamespace>PortalStations</RootNamespace>
         <AssemblyName>PortalStations</AssemblyName>
-        <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
+        <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
         <FileAlignment>512</FileAlignment>
         <LangVersion>10</LangVersion>
         <Nullable>enable</Nullable>
@@ -127,26 +127,33 @@
         </Reference>
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="Managers\LocalizationManager.cs" />
         <Compile Include="Managers\PieceCloneManager.cs" />
         <Compile Include="Managers\ItemManager.cs" />
         <Compile Include="Managers\MaterialReplacer.cs" />
         <Compile Include="Managers\PieceManager.cs" />
         <Compile Include="Plugin.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
-        <Compile Include="Stations\LoadUI.cs" />
-        <Compile Include="Stations\Patches.cs" />
         <Compile Include="Stations\PersonalTeleportationDevice.cs" />
         <Compile Include="Stations\PortalStation.cs" />
-        <Compile Include="Stations\PortalStationGUI.cs" />
         <Compile Include="Stations\Stations.cs" />
         <Compile Include="Stations\Teleportation.cs" />
+        <Compile Include="UI\DropdownItem.cs" />
+        <Compile Include="UI\FontManager.cs" />
+        <Compile Include="UI\StationButton.cs" />
+        <Compile Include="UI\StationElement.cs" />
+        <Compile Include="UI\StationUI.cs" />
+        <Compile Include="UI\UIHover.cs" />
         <Compile Include="VersionHandshake.cs" />
     </ItemGroup>
     <ItemGroup>
         <None Include="App.config" />
     </ItemGroup>
     <ItemGroup>
-        <EmbeddedResource Include="..\..\..\VALHEIM RIPPED\ashland rip\AshlandRIP\AssetBundles\StandaloneWindows\portal_station_assets">
+        <EmbeddedResource Include="..\..\..\bundles_2024\portalstationui">
+          <Link>assets\portalstationui</Link>
+        </EmbeddedResource>
+        <EmbeddedResource Include="..\..\..\bundles_2024\portal_station_assets">
           <Link>assets\portal_station_assets</Link>
         </EmbeddedResource>
         <Content Include=".gitignore" />
@@ -159,6 +166,7 @@
         <Content Include="Libs\ServerSync.dll">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
+        <EmbeddedResource Include="translations\English.yml" />
         <Content Include="UpdateManifest.ps1" />
     </ItemGroup>
     <ItemGroup>
